# TemplateLocalAIServer

./: .gitignore  CODING_LLM_DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: web_scraping.md
local_ai_server/: __init__.py  __main__.py  app_state.py  chroma_store.py  cli.py  config.py  endpoints.py  history_manager.py  middleware.py  model_manager.py  models_config.py  rag.py  server.py  vector_store.py  vector_store_factory.py  web_scraper.py
local_ai_server/static/: index.html  swagger.json
tests/: test_api.py  test_chroma_store.py  test_conversation_persistence.py  test_history_manager.py  test_rag.py  test_vector_store.py
