[metadata]
name = local_ai_server
version = 0.1.0
description = Local AI Server for running language models
long_description = file: README.md
long_description_content_type = text/markdown
author = Local AI Server Contributors
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    transformers>=4.0.0
    torch>=2.0.0
    llama-cpp-python[server]==0.2.27
    pyOpenSSL>=23.0.0
    cryptography>=41.0.0
    flask>=2.0.0
    werkzeug>=2.0.0
    flask-swagger-ui>=3.36.0
    requests>=2.25.0
    waitress>=2.1.0

[options.package_data]
local_ai_server =
    static/*
    models/.gitkeep
    ssl/.gitkeep
